syntax = "proto3";

package domain;
option go_package = "marketplace-services/pkg/domain";

message RemovedBrokerEvent {
    string address = 1;
}